# test-protobuf

./: .gitignore  CMakeLists.txt  README.md  alea.c  foo.proto  main.c  mainxx.cpp  protobuf-c.cmake  protobuf.cmake  run.sh  zeromq.cmake  zmq_pub.cpp  zmq_sub.cpp
